<resources>
    <string name="app_name">CarBookingApp</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_page">Login Page</string>
    <string name="checkboxText">Remember Me</string>
    <string name="forgotpassText">Forgot Password?</string>
    <string name="datePickBtnText">Pick Date</string>
    <string name="timePickBtnText">Pick Time</string>
    <string name="hhmmyyyy">DD/MM/YYYY</string>
    <string name="hhmm">HH:MM</string>
    <string name="mmyy">MM/YY</string>
    <string name="cvv">CVV</string>
    <string name="pickadrstext">Pick Up Address</string>
    <string name="pickdatetext">Pick Up Date</string>
    <string name="picktimetext">Pick Up Time</string>

    <string name="dropadrstext">Drop Off Address</string>
    <string name="dropdatetext">Drop Off Date</string>
    <string name="droptimetext">Drop Off Time</string>
    <string name="welcomemsg">Welcome</string>
    <string name="make_reservation">Make reservation</string>
    <string name="select_car_type">Select Car Type</string>
    <string name="reserve_ride">Reserve Ride</string>
    <string name="contact">Contact</string>
    <string name="phone_number">Phone Number</string>
    <string name="open_map">Open Map</string>
    <string name="myloc">I\'m Here</string>
    <string name="payment_amount">Payment Amount</string>
    <string name="name_on_card">Name on Card</string>
    <string name="number_on_card">Number on Card</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="security_code">Security Code</string>
    <string name="pay_invoice">Pay Invoice</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_number">Enter Number</string>
    <string name="orderverify">Verify Your Order</string>
    <string name="make_payment">Make Payment</string>
    <string name="or_sign_up_using">or Sign Up using</string>
    <string name="payment_successful">Payment Successful!</string>
</resources>